tests/type-error/lets/CyclicConstants.vix
f = case c of
  MyType c _ -> addInt 1 c

type myType = MyType int int

c =
  let g = f
  MyType 42 g

main = printInt f
